2008-11-04  Nick Roberts  <nickrob@snap.net.nz>

	* vc-cvs.el (vc-cvs-dir-extra-headers): Add tag name to header.
	* vc-dir.el (vc-dir-headers): Order headers as in PCL-CVS.

2008-11-04  Martin Rudalics  <rudalics@gmx.at>

	* subr.el (looking-back): Fix doc-string typo.

	* electric.el (Electric-pop-up-window): Call window-end with
	UPDATE set to t.

	* window.el (save-selected-window): Make it behave like
	save-selected-window-norecord.
	(save-selected-window-norecord): Remove, since functionality
	fully taken over by save-selected-window.
	(walk-windows, set-window-text-height, fit-window-to-buffer):
	Use save-selected-window instead of save-selected-window-norecord.

2008-11-03  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-engine.el (c-forward-label): Fix for QT macros.

2008-11-03  Chong Yidong  <cyd@stupidchicken.com>

	* subr.el (looking-back): Doc fix.

	* term/x-win.el (x-initialize-window-system): Call
	x-wm-set-size-hint after initialization.

	* eshell/em-hist.el (eshell-save-history-on-exit): Change default
	to t.

	* emacs-lisp/lisp-mode.el (lisp-mode): Remove bogus change from
	2000-12-08 (bug#1297).

	* font-lock.el (font-lock-keywords-case-fold-search): Doc fix.

2008-11-03  Vincent Belaïche  <vincent.b.1@hotmail.fr>

	* calc/calc-alg.el (calcFunc-collect): Return constant polynomial
	when appropriate.

2008-11-02  Martin Rudalics  <rudalics@gmx.at>

	* window.el (save-selected-window-norecord): New macro
	(walk-windows): Use save-selected-window-norecord and call
	select-window with NORECORD set.  (Bug#1237)
	(set-window-text-height, fit-window-to-buffer): Use
	save-selected-window-norecord and call select-window with
	NORECORD set.
	* subr.el (with-selected-window): Call set-frame-selected-window
	with new argument NORECORD set.  Update doc-string.
	(with-selected-frame): Call select-frame with new argument
	NORECORD set.  Update doc-string.
	* emacs-lisp/lisp-mode.el (save-selected-window-norecord): Put