@@ -1,3 +1,7 @@
+2008-11-04  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-dir.el (vc-dir-headers): Undo previous change.
+
 2008-11-04  Nick Roberts  <nickrob@snap.net.nz>
 
 	* vc-cvs.el (vc-cvs-dir-extra-headers): Add tag name to header.
